parser.output
Grammar

    0 $accept: program "end file"

    1 program: globals

    2 globals: globals varDecl SEMICOL
    3        | globals FN COLON fnDecl
    4        | ε

    5 varDecl: type id

    6 type: primType
    7     | arrayType

    8 primType: INT
    9         | BOOL
   10         | VOID
   11         | FILE

   12 arrayType: primType LBRACE INTLITERAL RBRACE

   13 fnDecl: LPAREN formals RPAREN type id LCURLY stmtList RCURLY
   14       | LPAREN RPAREN type id LCURLY stmtList RCURLY

   15 formals: formalDecl
   16        | formals COMMA formalDecl

   17 formalDecl: type id

   18 stmtList: ε
   19         | stmtList stmt SEMICOL
   20         | stmtList blockStmt

   21 blockStmt: WHILE LPAREN exp RPAREN LCURLY stmtList RCURLY
   22          | IF LPAREN exp RPAREN LCURLY stmtList RCURLY
   23          | IF LPAREN exp RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY

   24 stmt: varDecl
   25     | loc ASSIGN exp
   26     | OPEN READ loc STRINGLITERAL
   27     | OPEN WRITE loc STRINGLITERAL
   28     | CLOSE loc
   29     | loc POSTDEC
   30     | loc POSTINC
   31     | loc READ loc
   32     | loc WRITE exp
   33     | RETURN exp
   34     | RETURN
   35     | callExp

   36 exp: exp DASH exp
   37    | LPAREN exp QUESTION exp COLON exp RPAREN
   38    | exp CROSS exp
   39    | exp STAR exp
   40    | exp SLASH exp
   41    | exp AND exp
   42    | exp OR exp
   43    | exp EQUALS exp
   44    | exp NOTEQUALS exp
   45    | exp GREATER exp
   46    | exp GREATEREQ exp
   47    | exp LESS exp
   48    | exp LESSEQ exp
   49    | NOT exp
   50    | DASH term
   51    | term

   52 callExp: id LPAREN RPAREN
   53        | id LPAREN actualsList RPAREN

   54 actualsList: exp
   55            | actualsList COMMA exp

   56 term: loc
   57     | INTLITERAL
   58     | STRINGLITERAL
   59     | TRUE
   60     | FALSE
   61     | LPAREN exp RPAREN
   62     | callExp

   63 loc: id
   64    | id LBRACE exp RBRACE

   65 id: ID
   66   | CONSOLE


Terminals, with rules where they appear

    "end file" (0) 0
    error (256)
    AND <transToken> (258) 41
    ASSIGN <transToken> (259) 25
    BOOL <transToken> (260) 9
    CLOSE <transToken> (261) 28
    COLON <transToken> (262) 3 37
    COMMA <transToken> (263) 16 55
    CONSOLE <transToken> (264) 66
    DASH <transToken> (265) 36 50
    ELSE <transToken> (266) 23
    EQUALS <transToken> (267) 43
    FALSE <transToken> (268) 60
    FILE <transToken> (269) 11
    FN <transToken> (270) 3
    GREATER <transToken> (271) 45
    GREATEREQ <transToken> (272) 46
    ID <transIDToken> (273) 65
    IF <transToken> (274) 22 23
    INT <transToken> (275) 8
    INTLITERAL <transIntToken> (276) 12 57
    LCURLY <transToken> (277) 13 14 21 22 23
    LESS <transToken> (278) 47
    LESSEQ <transToken> (279) 48
    LPAREN <transToken> (280) 13 14 21 22 23 37 52 53 61
    LBRACE <transToken> (281) 12 64
    NOT <transToken> (282) 49
    NOTEQUALS <transToken> (283) 44
    OR <transToken> (284) 42
    OPEN <transToken> (285) 26 27
    CROSS <transToken> (286) 38
    POSTDEC <transToken> (287) 29
    POSTINC <transToken> (288) 30
    QUESTION <transToken> (289) 37
    READ <transToken> (290) 26 31
    RETURN <transToken> (291) 33 34
    RBRACE <transToken> (292) 12 64
    RCURLY <transToken> (293) 13 14 21 22 23
    RPAREN <transToken> (294) 13 14 21 22 23 37 52 53 61
    SEMICOL <transToken> (295) 2 19
    SLASH <transToken> (296) 40
    STAR <transToken> (297) 39
    STRINGLITERAL <transStrToken> (298) 26 27 58
    TRUE <transToken> (299) 59
    VOID <transToken> (300) 10
    WHILE <transToken> (301) 21
    WRITE <transToken> (302) 27 32


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    program <transProgram> (49)
        on left: 1
        on right: 0
    globals <transDeclList> (50)
        on left: 2 3 4
        on right: 1 2 3
    varDecl <transVarDecl> (51)
        on left: 5
        on right: 2 24
    type <transType> (52)
        on left: 6 7
        on right: 5 13 14 17
    primType <transType> (53)
        on left: 8 9 10 11
        on right: 6 12
    arrayType <transArrayType> (54)
        on left: 12
        on right: 7
    fnDecl <transFn> (55)
        on left: 13 14
        on right: 3
    formals <transFormalList> (56)
        on left: 15 16
        on right: 13 16
    formalDecl <transFormal> (57)
        on left: 17
        on right: 15 16
    stmtList <transStmts> (58)
        on left: 18 19 20
        on right: 13 14 19 20 21 22 23
    blockStmt <transStmt> (59)
        on left: 21 22 23
        on right: 20
    stmt <transStmt> (60)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35
        on right: 19
    exp <transExp> (61)
        on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 21 22 23 25 32 33 36 37 38 39 40 41 42 43 44 45 46 47 48 49 54 55 61 64
    callExp <transCallExp> (62)
        on left: 52 53
        on right: 35 62
    actualsList <transActuals> (63)
        on left: 54 55
        on right: 53 55
    term <transExp> (64)
        on left: 56 57 58 59 60 61 62
        on right: 50 51
    loc <transLoc> (65)
        on left: 63 64
        on right: 25 26 27 28 29 30 31 32 56
    id <transID> (66)
        on left: 65 66
        on right: 5 13 14 17 52 53 63 64


State 0

    0 $accept: • program "end file"

    $default  reduce using rule 4 (globals)

    program  go to state 1
    globals  go to state 2


State 1

    0 $accept: program • "end file"

    "end file"  shift, and go to state 3


State 2

    1 program: globals •
    2 globals: globals • varDecl SEMICOL
    3        | globals • FN COLON fnDecl

    BOOL  shift, and go to state 4
    FILE  shift, and go to state 5
    FN    shift, and go to state 6
    INT   shift, and go to state 7
    VOID  shift, and go to state 8

    $default  reduce using rule 1 (program)

    varDecl    go to state 9
    type       go to state 10
    primType   go to state 11
    arrayType  go to state 12


State 3

    0 $accept: program "end file" •

    $default  accept


State 4

    9 primType: BOOL •

    $default  reduce using rule 9 (primType)


State 5

   11 primType: FILE •

    $default  reduce using rule 11 (primType)


State 6

    3 globals: globals FN • COLON fnDecl

    COLON  shift, and go to state 13


State 7

    8 primType: INT •

    $default  reduce using rule 8 (primType)


State 8

   10 primType: VOID •

    $default  reduce using rule 10 (primType)


State 9

    2 globals: globals varDecl • SEMICOL

    SEMICOL  shift, and go to state 14


State 10

    5 varDecl: type • id

    CONSOLE  shift, and go to state 15
    ID       shift, and go to state 16

    id  go to state 17


State 11

    6 type: primType •
   12 arrayType: primType • LBRACE INTLITERAL RBRACE

    LBRACE  shift, and go to state 18

    $default  reduce using rule 6 (type)


State 12

    7 type: arrayType •

    $default  reduce using rule 7 (type)


State 13

    3 globals: globals FN COLON • fnDecl

    LPAREN  shift, and go to state 19

    fnDecl  go to state 20


State 14

    2 globals: globals varDecl SEMICOL •

    $default  reduce using rule 2 (globals)


State 15

   66 id: CONSOLE •

    $default  reduce using rule 66 (id)


State 16

   65 id: ID •

    $default  reduce using rule 65 (id)


State 17

    5 varDecl: type id •

    $default  reduce using rule 5 (varDecl)


State 18

   12 arrayType: primType LBRACE • INTLITERAL RBRACE

    INTLITERAL  shift, and go to state 21


State 19

   13 fnDecl: LPAREN • formals RPAREN type id LCURLY stmtList RCURLY
   14       | LPAREN • RPAREN type id LCURLY stmtList RCURLY

    BOOL    shift, and go to state 4
    FILE    shift, and go to state 5
    INT     shift, and go to state 7
    RPAREN  shift, and go to state 22
    VOID    shift, and go to state 8

    type        go to state 23
    primType    go to state 11
    arrayType   go to state 12
    formals     go to state 24
    formalDecl  go to state 25


State 20

    3 globals: globals FN COLON fnDecl •

    $default  reduce using rule 3 (globals)


State 21

   12 arrayType: primType LBRACE INTLITERAL • RBRACE

    RBRACE  shift, and go to state 26


State 22

   14 fnDecl: LPAREN RPAREN • type id LCURLY stmtList RCURLY

    BOOL  shift, and go to state 4
    FILE  shift, and go to state 5
    INT   shift, and go to state 7
    VOID  shift, and go to state 8

    type       go to state 27
    primType   go to state 11
    arrayType  go to state 12


State 23

   17 formalDecl: type • id

    CONSOLE  shift, and go to state 15
    ID       shift, and go to state 16

    id  go to state 28


State 24

   13 fnDecl: LPAREN formals • RPAREN type id LCURLY stmtList RCURLY
   16 formals: formals • COMMA formalDecl

    COMMA   shift, and go to state 29
    RPAREN  shift, and go to state 30


State 25

   15 formals: formalDecl •

    $default  reduce using rule 15 (formals)


State 26

   12 arrayType: primType LBRACE INTLITERAL RBRACE •

    $default  reduce using rule 12 (arrayType)


State 27

   14 fnDecl: LPAREN RPAREN type • id LCURLY stmtList RCURLY

    CONSOLE  shift, and go to state 15
    ID       shift, and go to state 16

    id  go to state 31


State 28

   17 formalDecl: type id •

    $default  reduce using rule 17 (formalDecl)


State 29

   16 formals: formals COMMA • formalDecl

    BOOL  shift, and go to state 4
    FILE  shift, and go to state 5
    INT   shift, and go to state 7
    VOID  shift, and go to state 8

    type        go to state 23
    primType    go to state 11
    arrayType   go to state 12
    formalDecl  go to state 32


State 30

   13 fnDecl: LPAREN formals RPAREN • type id LCURLY stmtList RCURLY

    BOOL  shift, and go to state 4
    FILE  shift, and go to state 5
    INT   shift, and go to state 7
    VOID  shift, and go to state 8

    type       go to state 33
    primType   go to state 11
    arrayType  go to state 12


State 31

   14 fnDecl: LPAREN RPAREN type id • LCURLY stmtList RCURLY

    LCURLY  shift, and go to state 34


State 32

   16 formals: formals COMMA formalDecl •

    $default  reduce using rule 16 (formals)


State 33

   13 fnDecl: LPAREN formals RPAREN type • id LCURLY stmtList RCURLY

    CONSOLE  shift, and go to state 15
    ID       shift, and go to state 16

    id  go to state 35


State 34

   14 fnDecl: LPAREN RPAREN type id LCURLY • stmtList RCURLY

    $default  reduce using rule 18 (stmtList)

    stmtList  go to state 36


State 35

   13 fnDecl: LPAREN formals RPAREN type id • LCURLY stmtList RCURLY

    LCURLY  shift, and go to state 37


State 36

   14 fnDecl: LPAREN RPAREN type id LCURLY stmtList • RCURLY
   19 stmtList: stmtList • stmt SEMICOL
   20         | stmtList • blockStmt

    BOOL     shift, and go to state 4
    CLOSE    shift, and go to state 38
    CONSOLE  shift, and go to state 15
    FILE     shift, and go to state 5
    ID       shift, and go to state 16
    IF       shift, and go to state 39
    INT      shift, and go to state 7
    OPEN     shift, and go to state 40
    RETURN   shift, and go to state 41
    RCURLY   shift, and go to state 42
    VOID     shift, and go to state 8
    WHILE    shift, and go to state 43

    varDecl    go to state 44
    type       go to state 10
    primType   go to state 11
    arrayType  go to state 12
    blockStmt  go to state 45
    stmt       go to state 46
    callExp    go to state 47
    loc        go to state 48
    id         go to state 49


State 37

   13 fnDecl: LPAREN formals RPAREN type id LCURLY • stmtList RCURLY

    $default  reduce using rule 18 (stmtList)

    stmtList  go to state 50


State 38

   28 stmt: CLOSE • loc

    CONSOLE  shift, and go to state 15
    ID       shift, and go to state 16

    loc  go to state 51
    id   go to state 52


State 39

   22 blockStmt: IF • LPAREN exp RPAREN LCURLY stmtList RCURLY
   23          | IF • LPAREN exp RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY

    LPAREN  shift, and go to state 53


State 40

   26 stmt: OPEN • READ loc STRINGLITERAL
   27     | OPEN • WRITE loc STRINGLITERAL

    READ   shift, and go to state 54
    WRITE  shift, and go to state 55


State 41

   33 stmt: RETURN • exp
   34     | RETURN •

    CONSOLE        shift, and go to state 15
    DASH           shift, and go to state 56
    FALSE          shift, and go to state 57
    ID             shift, and go to state 16
    INTLITERAL     shift, and go to state 58
    LPAREN         shift, and go to state 59
    NOT            shift, and go to state 60
    STRINGLITERAL  shift, and go to state 61
    TRUE           shift, and go to state 62

    $default  reduce using rule 34 (stmt)

    exp      go to state 63
    callExp  go to state 64
    term     go to state 65
    loc      go to state 66
    id       go to state 49


State 42

   14 fnDecl: LPAREN RPAREN type id LCURLY stmtList RCURLY •

    $default  reduce using rule 14 (fnDecl)


State 43

   21 blockStmt: WHILE • LPAREN exp RPAREN LCURLY stmtList RCURLY

    LPAREN  shift, and go to state 67


State 44

   24 stmt: varDecl •

    $default  reduce using rule 24 (stmt)


State 45

   20 stmtList: stmtList blockStmt •

    $default  reduce using rule 20 (stmtList)


State 46

   19 stmtList: stmtList stmt • SEMICOL

    SEMICOL  shift, and go to state 68


State 47

   35 stmt: callExp •

    $default  reduce using rule 35 (stmt)


State 48

   25 stmt: loc • ASSIGN exp
   29     | loc • POSTDEC
   30     | loc • POSTINC
   31     | loc • READ loc
   32     | loc • WRITE exp

    ASSIGN   shift, and go to state 69
    POSTDEC  shift, and go to state 70
    POSTINC  shift, and go to state 71
    READ     shift, and go to state 72
    WRITE    shift, and go to state 73


State 49

   52 callExp: id • LPAREN RPAREN
   53        | id • LPAREN actualsList RPAREN
   63 loc: id •
   64    | id • LBRACE exp RBRACE

    LPAREN  shift, and go to state 74
    LBRACE  shift, and go to state 75

    $default  reduce using rule 63 (loc)


State 50

   13 fnDecl: LPAREN formals RPAREN type id LCURLY stmtList • RCURLY
   19 stmtList: stmtList • stmt SEMICOL
   20         | stmtList • blockStmt

    BOOL     shift, and go to state 4
    CLOSE    shift, and go to state 38
    CONSOLE  shift, and go to state 15
    FILE     shift, and go to state 5
    ID       shift, and go to state 16
    IF       shift, and go to state 39
    INT      shift, and go to state 7
    OPEN     shift, and go to state 40
    RETURN   shift, and go to state 41
    RCURLY   shift, and go to state 76
    VOID     shift, and go to state 8
    WHILE    shift, and go to state 43

    varDecl    go to state 44
    type       go to state 10
    primType   go to state 11
    arrayType  go to state 12
    blockStmt  go to state 45
    stmt       go to state 46
    callExp    go to state 47
    loc        go to state 48
    id         go to state 49


State 51

   28 stmt: CLOSE loc •

    $default  reduce using rule 28 (stmt)


State 52

   63 loc: id •
   64    | id • LBRACE exp RBRACE

    LBRACE  shift, and go to state 75

    $default  reduce using rule 63 (loc)


State 53

   22 blockStmt: IF LPAREN • exp RPAREN LCURLY stmtList RCURLY
   23          | IF LPAREN • exp RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY

    CONSOLE        shift, and go to state 15
    DASH           shift, and go to state 56
    FALSE          shift, and go to state 57
    ID             shift, and go to state 16
    INTLITERAL     shift, and go to state 58
    LPAREN         shift, and go to state 59
    NOT            shift, and go to state 60
    STRINGLITERAL  shift, and go to state 61
    TRUE           shift, and go to state 62

    exp      go to state 77
    callExp  go to state 64
    term     go to state 65
    loc      go to state 66
    id       go to state 49


State 54

   26 stmt: OPEN READ • loc STRINGLITERAL

    CONSOLE  shift, and go to state 15
    ID       shift, and go to state 16

    loc  go to state 78
    id   go to state 52


State 55

   27 stmt: OPEN WRITE • loc STRINGLITERAL

    CONSOLE  shift, and go to state 15
    ID       shift, and go to state 16

    loc  go to state 79
    id   go to state 52


State 56

   50 exp: DASH • term

    CONSOLE        shift, and go to state 15
    FALSE          shift, and go to state 57
    ID             shift, and go to state 16
    INTLITERAL     shift, and go to state 58
    LPAREN         shift, and go to state 80
    STRINGLITERAL  shift, and go to state 61
    TRUE           shift, and go to state 62

    callExp  go to state 64
    term     go to state 81
    loc      go to state 66
    id       go to state 49


State 57

   60 term: FALSE •

    $default  reduce using rule 60 (term)


State 58

   57 term: INTLITERAL •

    $default  reduce using rule 57 (term)


State 59

   37 exp: LPAREN • exp QUESTION exp COLON exp RPAREN
   61 term: LPAREN • exp RPAREN

    CONSOLE        shift, and go to state 15
    DASH           shift, and go to state 56
    FALSE          shift, and go to state 57
    ID             shift, and go to state 16
    INTLITERAL     shift, and go to state 58
    LPAREN         shift, and go to state 59
    NOT            shift, and go to state 60
    STRINGLITERAL  shift, and go to state 61
    TRUE           shift, and go to state 62

    exp      go to state 82
    callExp  go to state 64
    term     go to state 65
    loc      go to state 66
    id       go to state 49


State 60

   49 exp: NOT • exp

    CONSOLE        shift, and go to state 15
    DASH           shift, and go to state 56
    FALSE          shift, and go to state 57
    ID             shift, and go to state 16
    INTLITERAL     shift, and go to state 58
    LPAREN         shift, and go to state 59
    NOT            shift, and go to state 60
    STRINGLITERAL  shift, and go to state 61
    TRUE           shift, and go to state 62

    exp      go to state 83
    callExp  go to state 64
    term     go to state 65
    loc      go to state 66
    id       go to state 49


State 61

   58 term: STRINGLITERAL •

    $default  reduce using rule 58 (term)


State 62

   59 term: TRUE •

    $default  reduce using rule 59 (term)


State 63

   33 stmt: RETURN exp •
   36 exp: exp • DASH exp
   38    | exp • CROSS exp
   39    | exp • STAR exp
   40    | exp • SLASH exp
   41    | exp • AND exp
   42    | exp • OR exp
   43    | exp • EQUALS exp
   44    | exp • NOTEQUALS exp
   45    | exp • GREATER exp
   46    | exp • GREATEREQ exp
   47    | exp • LESS exp
   48    | exp • LESSEQ exp

    AND        shift, and go to state 84
    DASH       shift, and go to state 85
    EQUALS     shift, and go to state 86
    GREATER    shift, and go to state 87
    GREATEREQ  shift, and go to state 88
    LESS       shift, and go to state 89
    LESSEQ     shift, and go to state 90
    NOTEQUALS  shift, and go to state 91
    OR         shift, and go to state 92
    CROSS      shift, and go to state 93
    SLASH      shift, and go to state 94
    STAR       shift, and go to state 95

    $default  reduce using rule 33 (stmt)


State 64

   62 term: callExp •

    $default  reduce using rule 62 (term)


State 65

   51 exp: term •

    $default  reduce using rule 51 (exp)


State 66

   56 term: loc •

    $default  reduce using rule 56 (term)


State 67

   21 blockStmt: WHILE LPAREN • exp RPAREN LCURLY stmtList RCURLY

    CONSOLE        shift, and go to state 15
    DASH           shift, and go to state 56
    FALSE          shift, and go to state 57
    ID             shift, and go to state 16
    INTLITERAL     shift, and go to state 58
    LPAREN         shift, and go to state 59
    NOT            shift, and go to state 60
    STRINGLITERAL  shift, and go to state 61
    TRUE           shift, and go to state 62

    exp      go to state 96
    callExp  go to state 64
    term     go to state 65
    loc      go to state 66
    id       go to state 49


State 68

   19 stmtList: stmtList stmt SEMICOL •

    $default  reduce using rule 19 (stmtList)


State 69

   25 stmt: loc ASSIGN • exp
